lavender: overlay: use Pie qti-telephony-common
Signed-off-by: mdeejay <mdjrussia@gmail.com>

--- a/overlay-syberia/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-syberia/frameworks/base/core/res/res/values/config.xml
@@ -37,4 +37,7 @@
 
     <!--  Whether Multiuser UI should be shown -->
     <bool name="config_enableMultiUserUI">true</bool>
+	
+    <!-- Whether the device has outdated qti-telephony-common.jar -->
+    <bool name="config_oldQtiTelephony">false</bool>
 </resources>
